feat: added saving fetched data to db